[package]
edition = "2018"
name = "ra_vfs"
version = "0.2.4"
authors = ["rust-analyzer developers"]
description = "Virtual File System abstraction for rust-analyzer"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/rust-analyzer/ra_vfs"


[dependencies]
walkdir = "2.2.7"
relative-path = "0.4.0"
rustc-hash = "1.0"
crossbeam-channel = "0.3.5"
log = "0.4.6"
notify = "4.0.9"
parking_lot = "0.8.0"

[dev-dependencies]
tempfile = "3"
flexi_logger = "0.10.0"
